@@ -721,6 +721,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2734. Skipped sub-folders in the local log dir when aggregating logs.
     (Xuan Gong via zjshen)
 
+    YARN-2726. CapacityScheduler should explicitly log when an accessible
+    label has no capacity. (Wangda Tan via xgong)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
